# cmdcalc

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
calceval/: CMakeLists.txt
calceval/include/calceval/: Parser.hpp  ParserLogic.hpp  ParserLogic.tpp  Scanner.hpp  Token.hpp
calceval/include/calceval/type/: Double.hpp  Standard.hpp
calceval/src/: Error.cpp  Scanner.cpp  Token.cpp
include/calceval/: Error.hpp  Parser.hpp  Scanner.hpp  Token.hpp
include/calceval/type/: Base.hpp  Double.hpp
include/calcparser/: Parser.hpp
src/: CMakeLists.txt  Error.cpp  Parser.cpp  Scanner.cpp  Token.cpp
tests/: CMakeLists.txt  CustomImplTests.cpp  ErrorTests.cpp  OrderTests.cpp  ParserTests.cpp  ScannerTests.cpp  TokenTests.cpp
